[package]
name = "zed-export-rs"
version = "1.0.0-rc.1"
edition = "2024"
description = "A CLI tool to export Zed editor conversations to Markdown files."
repository = "https://github.com/egemengol/zed-export-rs"
license = "MIT"
keywords = ["zed", "export", "markdown", "llm", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
base64 = "0.22.1"
dirs = "6"
chrono = { version = "0.4.44", features = ["serde"] }
eyre = "0.6.12"
infer = "0.19.0"
rusqlite = { version = "0.38.0", features = ["bundled", "backup"] }
tempfile = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1"
sha2 = "0.10"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
zstd = "0.13"
slug = "0.1"
indicatif = "0.18"

# Optimize for binary size and speed
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
