[package]
name = "zed-chat-export"
version = "0.1.0"
edition = "2024"
description = "Export your Zed editor AI chat history to Markdown files for archiving and LLM context."
repository = "https://github.com/egemengol/zed-chat-export"
homepage = "https://github.com/egemengol/zed-chat-export"
authors = ["Egemen Göl <egemengol@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["zed", "export", "markdown", "llm", "backup"]
categories = ["command-line-utilities", "text-processing", "database"]
include = ["src/**/*", "LICENSE", "README.md", "Cargo.toml"]
rust-version = "1.89.0"

[features]
sequential = ["indicatif"]

[dependencies]
base64 = "0.22.1"
dirs = "6"
chrono = { version = "0.4.44", features = ["serde"] }
eyre = "0.6.12"
infer = "0.19.0"
rusqlite = { version = "0.38.0", features = ["bundled", "backup"] }
tempfile = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1"
sha2 = "0.10"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
zstd = "0.13"
slug = "0.1"
indicatif = { version = "0.18", optional = true }
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[profile.profiling]
inherits = "release"
strip = false
debug = true
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
